Chore: Page Designer component - Look Book Layout bug fix (W-6379119) (#604)

--- a/cartridges/app_storefront_base/cartridge/client/default/scss/experience/components/storefront/mobileGridLookBook.scss
+++ b/cartridges/app_storefront_base/cartridge/client/default/scss/experience/components/storefront/mobileGridLookBook.scss
@@ -17,7 +17,7 @@
     .show-more {
         text-align: center !important;
 
-        @include media-breakpoint-up(md) {
+        @include media-breakpoint-up(lg) {
             display: none;
         }
     }
